# ServerStatus-Rust

.github/workflows/: release.yml
client/: Cargo.toml
client/src/: grpc.rs  sys_info.rs
common/: Cargo.toml  build.rs
server/: Cargo.toml
server/src/: auth.rs  jwt.rs
