[package]
edition = "2021"
name = "stat_common"
version = "1.1.5"

authors = ["doge <doge.py@gmail.com>"]
categories = ["monitoring-tools"]
description = "A simple server monitoring tool"
keywords = ["stat_common", "serverstatus", "monitor"]
license = "Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/zdz/ServerStatus-Rust"
repository = "https://github.com/zdz/ServerStatus-Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = {version = "0.14.3"}
prost = "0.14.3"
bytes = {version = "1.11.0", features = ["serde"]}
serde = {version = "1.0.228", default-features = false, features = ["derive", "alloc"]}
tonic-prost="0.14.3"

[target.'cfg(not(target_env = "msvc"))'.build-dependencies]
chrono = "0.4.43"
protobuf-src = "2.1.1"
prost-build = "0.14.3"

[build-dependencies]
chrono = "0.4.43"
tonic-build = "0.14.3"
tonic-prost-build="0.14.3"
